--- a/.gitignore
+++ b/.gitignore
@@ -232,13 +232,6 @@ FakesAssemblies/
 # GhostDoc plugin setting file
 *.GhostDoc.xml
 
-# Node.js Tools for Visual Studio
-.ntvs_analysis.dat
-node_modules/
-
-# Typescript v1 declaration files
-typings/
-
 # Visual Studio 6 build log
 *.plg
 
@@ -286,3 +279,27 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+
+
+# Node.js Tools for Visual Studio
+.ntvs_analysis.dat
+node_modules/
+packages
+
+# Typescript v1 declaration files
+typings/
+
+# Other Package manager components
+jspm_packages
+bower_components
+
+# VS Code
+.vscode/
+
+# App Specific files
+**/app/**/*.js
+**/app/**/*.map
+
+# Build Location
+wwwroot/
+build/
