--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~2.4.10",
-    "@angular/compiler": "~2.4.10",
-    "@angular/core": "~2.4.10",
-    "@angular/forms": "~2.4.10",
-    "@angular/http": "~2.4.10",
-    "@angular/platform-browser": "~2.4.10",
-    "@angular/platform-browser-dynamic": "~2.4.10",
-    "@angular/router": "^3.4.1",
-    "@angular/upgrade": "^2.4.10",
+    "@angular/common": "^4.4.4",
+    "@angular/compiler": "^4.4.4",
+    "@angular/compiler-cli": "^4.4.4",
+    "@angular/core": "^4.4.4",
+    "@angular/forms": "^4.4.4",
+    "@angular/http": "^4.4.4",
+    "@angular/platform-browser": "^4.4.4",
+    "@angular/platform-browser-dynamic": "^4.4.4",
+    "@angular/router": "^4.4.4",
+    "@angular/upgrade": "^4.4.4",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "mydatepicker": "^2.0.27",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.1.0",
     "underscore": "^1.8.3",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.4.10",
     "@ngtools/webpack": "^1.7.2",
     "@types/core-js": "^0.9.41",
     "@types/node": "^8.0.26",
@@ -55,11 +55,12 @@
     "style-loader": "^0.18.2",
     "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
-    "typescript": "2.4.0",
+    "typescript": "^2.5.3",
     "typings": "^1.0.4",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.8.2",
     "webpack-merge": "^4.1.0"
   },
