--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ie-shim": "^0.1.0",
     "mydatepicker": "^2.0.27",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.1.0",
     "underscore": "^1.8.3",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
