--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@angular/router": "^5.2.6",
     "@angular/upgrade": "^5.2.6",
     "@ngu/carousel": "^1.4.6",
+    "@swimlane/ngx-datatable": "^11.3.2",
+    "applens-diagnostics": "file:///D:\\AppLensV3\\AngularApp\\dist.tgz",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ie-shim": "^0.1.0",
+    "moment": "^2.22.1",
     "mydatepicker": "^2.6.2",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.1.0",
