--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ngu/carousel": "^1.4.6",
     "@swimlane/ngx-datatable": "^11.3.2",
     "applens-diagnostics": "0.0.6",
+    "@types/applicationinsights-js": "^1.0.5",
+    "applicationinsights-js": "^1.0.18",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
