Update Package.json and add linux best practices (#168)
* Update Package.json and add linux best practices

* Fixes

--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "@angular/upgrade": "5.2.7",
     "@swimlane/ngx-datatable": "^11.3.2",
     "@types/applicationinsights-js": "^1.0.5",
-    "applens-diagnostics": "file:///D:\\applensv3\\AngularApp\\dist.tgz",
+    "applens-diagnostics": "0.0.14",
     "applicationinsights-js": "^1.0.18",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ie-shim": "^0.1.0",
+    "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "mydatepicker": "^2.6.2",
     "reflect-metadata": "^0.1.3",
