--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -26,7 +26,7 @@
     "@angular/upgrade": "5.2.7",
     "@swimlane/ngx-datatable": "^11.3.2",
     "@types/applicationinsights-js": "^1.0.5",
-    "applens-diagnostics": "0.0.15",
+    "applens-diagnostics": "file:../../Applensv3/AngularApp/dist.tgz",
     "applicationinsights-js": "^1.0.18",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
