Reduce Bundle Size

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -15,5 +15,61 @@
   "Kusto": {
     "ClientId": "",
     "AppKey": ""
+  },
+  "Chat": {
+    "GlobalEnabled": "true",
+    "BusinessStartDay": 1, // Monday
+    "BuisnessEndDay": 5, // Friday
+    "BusinessStartHourPST": 9, // 9AM
+    "BusinessEndHourPST": 18, // 6PM
+    "OffHours": [
+      {
+        //Thursday, 11 AM - 12:30 PM
+        "Day": 4,
+        "StartHourPST": 11,
+        "StartMinutesPST": 0,
+        "EndHourPST": 12,
+        "EndMinutePST": 30
+      }
+    ],
+    "PublicHolidays": [
+      {
+        // Thanksgiving Day - 1
+        "Day": 22,
+        "Month": 11,
+        "Year": 2018
+      },
+      {
+        // Thanksgiving Day - 2
+        "Day": 23,
+        "Month": 11,
+        "Year": 2018
+      },
+      {
+        // Xmas eve
+        "Day": 24,
+        "Month": 12,
+        "Year": 2018
+      },
+      {
+        // Xmas
+        "Day": 25,
+        "Month": 12,
+        "year": 2018
+      },
+      {
+        // New Yr Eve
+        "Day": 31,
+        "Month": 12,
+        "Year": 2018
+      },
+      {
+        // New Yr
+        "Day": 1,
+        "Month": 1,
+        "Year": 2019
+      }
+    ]
+
   }
 }
