Enable Chat for Memory

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -34,40 +34,45 @@
     ],
     "PublicHolidays": [
       {
+        "Day": 21,
+        "Month": 01,
+        "Year": 2019
+      },
+      {
         // Thanksgiving Day - 1
-        "Day": 22,
+        "Day": 28,
         "Month": 11,
-        "Year": 2018
+        "Year": 2019
       },
       {
         // Thanksgiving Day - 2
-        "Day": 23,
+        "Day": 29,
         "Month": 11,
-        "Year": 2018
+        "Year": 2019
       },
       {
         // Xmas eve
         "Day": 24,
         "Month": 12,
-        "Year": 2018
+        "Year": 2019
       },
       {
         // Xmas
         "Day": 25,
         "Month": 12,
-        "year": 2018
+        "year": 2019
       },
       {
         // New Yr Eve
         "Day": 31,
         "Month": 12,
-        "Year": 2018
+        "Year": 2019
       },
       {
         // New Yr
         "Day": 1,
         "Month": 1,
-        "Year": 2019
+        "Year": 2020
       }
     ]
 
