Update public holidays

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -34,8 +34,33 @@
     ],
     "PublicHolidays": [
       {
+        // Martin Luther King Day
         "Day": 21,
-        "Month": 01,
+        "Month": 1,
+        "Year": 2019
+      },
+      {
+        // Presidents Day
+        "Day": 18,
+        "Month": 2,
+        "Year": 2019
+      },
+      {
+        // 	Memorial Day
+        "Day": 27,
+        "Month": 5,
+        "Year": 2019
+      },
+      {
+        // 	Independence Day
+        "Day": 4,
+        "Month": 7,
+        "Year": 2019
+      },
+      {
+        //  Labor Day
+        "Day": 2,
+        "Month": 9,
         "Year": 2019
       },
       {
