Support for AKS
Adding local development support to hit the runtime host directly in DiagnoticRoleClient.cs and adding support for AKS

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -16,31 +16,32 @@
     "InstrumentationKey": ""
   },
   "DiagnosticRole": {
-    "endpoint": "",
-    "authCertThumbprint": ""
+    "endpoint": "http://localhost:65020",
+    "authCertThumbprint": "07ae6b84d768a2806c65f1229b034561f5b7fcf4",
+    "isLocalDevelopment": "true"
   },
   "Observer": {
-    "clientId": "",
-    "resourceId": "",
-    "clientSecret": "",
-    "authority": "",
+    "clientId": "9633e90a-48cc-4b8c-be36-5d751fa9e66a",
+    "resourceId": "https://microsoft.onmicrosoft.com/SupportObserverResourceApp",
+    "clientSecret": "Ddwc9tZDflIgKWQtu5uK6WuvfBxZW8zY1U9OnD3tOqk=",
+    "authority": "https://login.microsoftonline.com/microsoft.onmicrosoft.com",
     "targetSupportApiTestSlot": "false"
   },
   "Github": {
-    "UserName": "",
-    "RepoName": "",
-    "Branch": "",
-    "AccessToken": ""
+    "UserName": "nmallick1",
+    "RepoName": "DetectorsTestRepo",
+    "Branch": "master",
+    "AccessToken": "4f21a7805704f344d6d7f9d6d88ad3b0dd216aa5"
   },
   "AzureAd": {
-    "Instance": "",
-    "ClientId": "",
-    "TenantId": "",
-    "Domain": ""
+    "Instance": "https://login.microsoftonline.com/",
+    "ClientId": "0128de1e-8cb3-480c-8c65-9b08be97dd40",
+    "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
+    "Domain": "https://microsoft.onmicrosoft.com"
   },
   "Kusto": {
-    "ClientId": "",
-    "AppKey": ""
+    "ClientId": "9633e90a-48cc-4b8c-be36-5d751fa9e66a",
+    "AppKey": "Ddwc9tZDflIgKWQtu5uK6WuvfBxZW8zY1U9OnD3tOqk="
   },
   "LocalDevelopment": {
     "connectionString": ""
