Add a setting for DiagRole endpoint
Add a setting for DiagRole endpoint. Update appsettings.json

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -17,6 +17,7 @@
   },
   "DiagnosticRole": {
     "endpoint": "http://localhost:65020",
+    //"endpoint": "https://hawfor1georegionsvc.cloudapp.net:1743",
     "authCertThumbprint": "07ae6b84d768a2806c65f1229b034561f5b7fcf4",
     "isLocalDevelopment": "true"
   },
