Gitignored all appsettings files to avoid committing private keys

--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,8 @@ Thumbs.db
 /ssl/*.crt
 /ssl/*.key
 
-package-lock.json
+.angulardoc.json
+
+# .Net Core configuration files to avoid all risk of committing secrets
+appsettings.json
+appsettings.*.json
