Added environment.local.ts to gitignore This file holds secret keys needed to run a local portal server

--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve",
     "applens": "ng serve applens --aot --optimization=false",
     "ssl": "ng serve app-service-diagnostics --aot --optimization=false --ssl --sslCert ./ssl/server.crt --sslKey ./ssl/server.key",
+    "ssl-local": "npm run ssl -- -c local",
     "asd": "concurrently -k \"npm run ssl\" \"npm run lib\"",
     "build-lib": "ng build diagnostic-data",
     "build-applens": "ng build applens --prod",
@@ -40,6 +41,7 @@
     "bootstrap": "^3.3.6",
     "copy-html-to-clipboard": "^4.0.1",
     "core-js": "^2.4.1",
+    "dotenv": "^6.2.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ie-shim": "^0.1.0",
