Remove weekly report first

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -47,6 +47,8 @@
     "connectionString": ""
   },
   "EmailNotification": {
-    "ApiKey": ""
+    "ApiKey": "",
+    "PublishingEmailTemplateId": "",
+    "ReportingEmailTemplateId": ""
   }
 }
