--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -49,6 +49,7 @@
     "ng-pick-datetime": "^6.0.16",
     "ng-pick-datetime-moment": "1.0.7",
     "ng2-nvd3": "^2.0.0",
+    "ng5-slider": "^1.1.13",
     "ngx-markdown": "6.0.0 - 6.2.0",
     "ngx-monaco-editor": "^6.0.0",
     "ngx-smart-modal": "^6.0.4",
