Live Chat Timings updat

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -18,18 +18,21 @@
   },
   "Chat": {
     "GlobalEnabled": "true",
-    "BusinessStartDay": 1, // Monday
-    "BuisnessEndDay": 5, // Friday
-    "BusinessStartHourPST": 7, // 7AM
-    "BusinessEndHourPST": 17, // 5PM
+    "GlobalChatHours": [ 
+      // These are global chat hour settings. To override for any product, see below section "ProductSpecificSettings"
+      {
+        "BusinessStartDay": 1, // Monday
+        "BuisnessEndDay": 5, // Friday
+        "BusinessStartTimePST": "07:00", // 7AM
+        "BusinessEndTimePST": "17:00" // 5PM
+      }
+    ],
     "OffHours": [
       {
         //Thursday, 11 AM - 12:30 PM
-        "Day": 6,
-        "StartHourPST": 11,
-        "StartMinutesPST": 0,
-        "EndHourPST": 12,
-        "EndMinutePST": 30
+        "Day": 4,
+        "StartTimePST": "11:00",
+        "EndTimePST": "12:30"
       }
     ],
     "PublicHolidays": [
@@ -99,7 +102,26 @@
         "Month": 1,
         "Year": 2020
       }
+    ],
+    "ProductSpecificSettings": [
+      //Override for Default settings For specific Products
+      {
+        "Name":  "Web App (Windows)",
+        "ChatHours": [
+          {
+            "BusinessStartDay": 0, // Sunday
+            "BuisnessEndDay": 4, // Thursday
+            "BusinessStartTimePST": "22:30", // 10:30 PM PST
+            "BusinessEndTimePST": "23:59" //  11:59 PM PST
+          },
+          {
+            "BusinessStartDay": 1, // Monday
+            "BuisnessEndDay": 5,  //  Friday  
+            "BusinessStartTimePST": "00:01", // 00:01 AM PST
+            "BusinessEndTimePST": "17:00"   //  05:00 PM PST
+          }
+        ]
+      }
     ]
-
   }
 }
