Update Chat Hours for CSS

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -111,14 +111,20 @@
           {
             "BusinessStartDay": 0, // Sunday
             "BuisnessEndDay": 4, // Thursday
-            "BusinessStartTimePST": "22:30", // 10:30 PM PST
+            "BusinessStartTimePST": "23:00", // 11:00 PM PST
             "BusinessEndTimePST": "23:59" //  11:59 PM PST
           },
           {
             "BusinessStartDay": 1, // Monday
-            "BuisnessEndDay": 5,  //  Friday  
+            "BuisnessEndDay": 5, //  Friday
             "BusinessStartTimePST": "00:01", // 00:01 AM PST
-            "BusinessEndTimePST": "17:00"   //  05:00 PM PST
+            "BusinessEndTimePST": "03:00" //  03:00 AM PST
+          },
+          {
+            "BusinessStartDay": 1, // Monday
+            "BuisnessEndDay": 5, //  Friday
+            "BusinessStartTimePST": "07:00", // 07:00 AM PST
+            "BusinessEndTimePST": "17:00" //  05:00 PM PST
           }
         ]
       }
