Few Chat string updates

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -16,9 +16,13 @@
     "ClientId": "",
     "AppKey": ""
   },
+  "ContentSearch": {
+    "Ocp-Apim-Subscription-Key": ""
+  },
   "Chat": {
+    "FreshToken": "",
     "GlobalEnabled": "true",
-    "GlobalChatHours": [ 
+    "GlobalChatHours": [
       // These are global chat hour settings. To override for any product, see below section "ProductSpecificSettings"
       {
         "BusinessStartDay": 1, // Monday
@@ -106,7 +110,7 @@
     "ProductSpecificSettings": [
       //Override for Default settings For specific Products
       {
-        "Name":  "Web App (Windows)",
+        "Name": "Web App (Windows)",
         "ChatHours": [
           {
             "BusinessStartDay": 1, // Monday
