Use diagservice to get basic site and stamp info when diagnosticObserver is enabled

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -25,7 +25,8 @@
     "resourceId": "",
     "clientSecret": "",
     "authority": "",
-    "targetSupportApiTestSlot": "false"
+    "targetSupportApiTestSlot": "false",
+    "diagnosticObserverEnabled": false
   },
   "Github": {
     "UserName": "",
