--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -51,6 +51,12 @@
     "PublishingEmailTemplateId": "",
     "ReportingEmailTemplateId": ""
   },
+  "DatacenterFederationEnabled": false,
+  "DatacenterFederationConfiguration": {
+    "Realm": "",
+    "MetadataAddress": "",
+    "Issuer": ""
+  },
   "Graph": {
     "ClientId": "",
     "AppKey": ""
