Intermediate work save.

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -62,5 +62,10 @@
     "AccessToken": "",
     "CacheSelfHelpPaths": ""
   },
-  "ServerMode": ""
+  "FreshChat": {
+    "ApplensApiKey": "",
+    "FreshChatApiKey": "",
+    "FreshChatBaseUri": "https://api.freshchat.com/v2",
+    "UserAgentToFreshChat": "applensv3"
+  }
 }
