Added a cahce for agent, user and resourceId. Also added documentation.

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -64,7 +64,7 @@
   },
   "FreshChat": {
     "ApplensApiKey": "",
-    "FreshChatApiKey": "",
+    "FreshChatAuthHeader": "",
     "FreshChatBaseUri": "https://api.freshchat.com/v2",
     "UserAgentToFreshChat": "applensv3"
   }
