Adding the ServerMode back in appsettings.

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -68,6 +68,7 @@
     "AccessToken": "",
     "CacheSelfHelpPaths": ""
   },
+  "ServerMode": "",
   "FreshChat": {
     "ApplensApiKey": "",
     "FreshChatAuthHeader": "",
