Add startup for national clouds

--- a/ApplensBackend/Properties/launchSettings.json
+++ b/ApplensBackend/Properties/launchSettings.json
@@ -24,6 +24,12 @@
     "AppLensV3NationalCloud": {
       "commandName": "Project",
       "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "NationalCloud"
+      }
+    },
+    "AppLensV3NationalCloudDevelopment": {
+      "commandName": "Project",
+      "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "NationalCloudDevelopment"
       }
     }
