Nmallick1/chat transcript (#399)
* Intermediate work save.

* Fixing the models and usage.

* Completed call top log data into Kusto.

* Removed unnecessary blank line.

* Added a cahce for agent, user and resourceId. Also added documentation.

* Removed sample messages file that I was using during debug.

* Adding the ServerMode back in appsettings.

* Did case insensitive comparision of the freshchat header.

* Fixing suggestions from PR review

* Working on PR review comments from shekhar.

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -68,5 +68,11 @@
     "AccessToken": "",
     "CacheSelfHelpPaths": ""
   },
-  "ServerMode": ""
+  "ServerMode": "",
+  "FreshChat": {
+    "ApplensApiKey": "",
+    "FreshChatAuthHeader": "",
+    "FreshChatBaseUri": "https://api.freshchat.com/v2",
+    "UserAgentToFreshChat": "applensv3"
+  }
 }
