Search UI and telemetry for search UI (#387)
* Search component and deep linking

* Search UI, results, and telemetry for result clicks

* Telemetry in search

* Search service injection

* Encode query parameter as URI component

* Search UI beautification and search enabled flag config

* Removed back button

* Search UI modifications and enabled testing mode

* Merged from master

* Dashboard module whitespace correction

* Flag settings not required

* Handle SG not defined in app config scenario

* No result scenarios beautification

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -74,5 +74,6 @@
     "FreshChatAuthHeader": "",
     "FreshChatBaseUri": "https://api.freshchat.com/v2",
     "UserAgentToFreshChat": "applensv3"
-  }
+  },
+  "TestSecurityGroup": "ajsharm,xipeng,cmaher,dagrooms,hawfor,khzayed,mikono,micjohn,nmallick,pbabut,puneetg,reswamin,shgup"
 }
