--- a/AngularApp/angular.json
+++ b/AngularApp/angular.json
@@ -80,6 +80,27 @@
                   "with": "projects/applens/src/environments/environment.local.ts"
                 }
               ]
+            },
+            "nationalcloud-production":{
+              "fileReplacements": [
+                {
+                  "replace": "projects/applens/src/environments/environment.ts",
+                  "with": "projects/applens/src/environments/environment.ncloud.ts"
+                },
+                {
+                  "replace": "projects/applens/src/app/shared/auth/aad-auth-guard.service.ts",
+                  "with": "projects/applens/src/app/shared/auth/aad-auth-guard.service.passthrough.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
             }
           }
         },
@@ -94,6 +115,9 @@
             },
             "local": {
               "browserTarget": "applens:build:local"
+            },
+            "nationalcloud-production": {
+              "browserTarget": "applens:build:nationalcloud-production"
             }
           }
         },
