--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -6,11 +6,13 @@
     "ng": "ng",
     "start": "ng serve",
     "applens": "ng serve applens --aot --optimization=false",
+    "ncloud-applens":"ng serve applens --configuration=nationalcloud-production --aot --optimization=false",
     "ssl": "ng serve app-service-diagnostics --aot --optimization=false --ssl --sslCert ./ssl/server.crt --sslKey ./ssl/server.key",
     "ssl-local": "npm run ssl -- -c local",
     "asd": "concurrently -k \"npm run ssl\" \"npm run lib\"",
     "build-lib": "ng build diagnostic-data",
     "build-applens": "ng build applens --prod",
+    "build-ncloud-applens":"ng build applens --configuration=nationalcloud-production",
     "build-asd": "ng build app-service-diagnostics --prod",
     "build": "npm run build-lib && npm run build-applens && npm run build-asd",
     "test": "ng test",
