Fixing Chat typo that is prevent chat to come up

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -47,7 +47,7 @@
         "Hours": []
       }
     ],
-    "PublicHolidays": [
+    "PublicHolidayRegions": [
       {
         "Name": "USPublicHolidays",
         "Holidays": [
