Applens china cloud changes (#442)
* "Use diagnostic role for basic site stamp information (#322)

This reverts commit 694e8cb81838b020b6493480f2955e7f49f81cf9.

* Use diagservice to get basic site and stamp info when diagnosticObserver is enabled

* Remove empty folder

* Add properties to the ObserverSiteInfo object and update site service to use new properties from site info object instead of request body object

* Remove post body calls and use single equals instead of double equals for checking IsLinux property

* Forgot to add file. Change property name in resource service class from resourceBody to observerResource

* Forgot to remove requestBody response for compiler call

* Add startup files for national clouds

* Add startup for national clouds

* Add empty email notification service implementation for national cloud

* Temporarily comment out a few AAD related code paths to unblock testing dsts

* Add build environments for national clouds

* Add NPM scripts for building and running the national cloud environment of applens.

* Create new environment files for national cloud. Put AAD authentication behind a flag.

* Fix import statement to import whatever environment file was built. Add condition to check if adal is enabled in the SideNavCompomenet.

--- a/AngularApp/angular.json
+++ b/AngularApp/angular.json
@@ -80,6 +80,39 @@
                   "with": "projects/applens/src/environments/environment.local.ts"
                 }
               ]
+            },
+            "nationalcloud-production":{
+              "fileReplacements": [
+                {
+                  "replace": "projects/applens/src/environments/environment.ts",
+                  "with": "projects/applens/src/environments/environment.ncloud-prod.ts"
+                },
+                {
+                  "replace": "projects/applens/src/app/shared/auth/aad-auth-guard.service.ts",
+                  "with": "projects/applens/src/app/shared/auth/aad-auth-guard.service.passthrough.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            },
+            "nationalcloud-local":{
+              "fileReplacements": [
+                {
+                  "replace": "projects/applens/src/environments/environment.ts",
+                  "with": "projects/applens/src/environments/environment.ncloud.ts"
+                },
+                {
+                  "replace": "projects/applens/src/app/shared/auth/aad-auth-guard.service.ts",
+                  "with": "projects/applens/src/app/shared/auth/aad-auth-guard.service.passthrough.ts"
+                }
+              ]
             }
           }
         },
@@ -94,6 +127,12 @@
             },
             "local": {
               "browserTarget": "applens:build:local"
+            },
+            "nationalcloud-production": {
+              "browserTarget": "applens:build:nationalcloud-production"
+            },
+            "nationalcloud-local": {
+              "browserTarget": "applens:build:nationalcloud-local"
             }
           }
         },
