--- a/ApplensBackend/Properties/launchSettings.json
+++ b/ApplensBackend/Properties/launchSettings.json
@@ -20,6 +20,18 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "AppLensV3NationalCloud": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "NationalCloud"
+      }
+    },
+    "AppLensV3NationalCloudDevelopment": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "NationalCloudDevelopment"
+      }
     }
   }
 }
