Disabling Linux for India hours (#437)

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -175,7 +175,7 @@
           {
             "BusinessStartDay": 1, // Monday
             "BuisnessEndDay": 5, //  Friday
-            "BusinessStartTimePST": "08:00", // 07:00 AM PST
+            "BusinessStartTimePST": "08:00", // 08:00 AM PST
             "BusinessEndTimePST": "17:00", //  05:00 PM PST
             "SupportTopics": [
               "32542218", //Availability and Performance/Web App Down
@@ -200,7 +200,7 @@
             "BusinessStartDay": 1, // Monday
             "BuisnessEndDay": 5, //  Friday
             "BusinessStartTimePST": "07:00", // 07:00 AM PST
-            "BusinessEndTimePST": "08:00", //  08:00 PM PST
+            "BusinessEndTimePST": "08:00", //  08:00 AM PST
             "SupportTopics": [
               "32542208", //Configuration and Management/Backup and Restore
               "32440123", //Configuration and Management/Configuring SSL
@@ -222,7 +222,7 @@
           {
             "BusinessStartDay": 1, // Monday
             "BuisnessEndDay": 5, //  Friday
-            "BusinessStartTimePST": "07:00", // 07:00 AM PST
+            "BusinessStartTimePST": "08:00", // 08:00 AM PST
             "BusinessEndTimePST": "17:00", //  05:00 PM PST
             "SupportTopics": [
               "32542218", //Availability and Performance/Web App Down
