Nmallick1/partner case submission (#454)
* Using configurable API version and configurable home page text for Diagnose And Solve portal.

* Updating the documentation.

* Enable configurable categories.

* Enable static route for serving confirm from the armResourceConfig folder.

* Config for AKS resource.

* Enable Diagnose and Solve blade for any ARM resource type.

* Updating to read config of nested resources at the same place as the parent resource. Nested configs should nly be enabled when we start supporting nested resources throughout.

* Simplifying the home page HTML by adding default values for home page title, description and search bar placeholder.

* Initializing the ArmReesourceConfig so that it does not throw errors if the object does not exists.

* Removed double bangs

--- a/AngularApp/angular.json
+++ b/AngularApp/angular.json
@@ -40,8 +40,8 @@
               "node_modules/admin-lte/dist/css/AdminLTE.min.css",
               "node_modules/admin-lte/dist/css/skins/skin-blue.css",
               "projects/applens/src/styles.scss",
-			  "node_modules/vis/dist/vis.min.css",
-			  "node_modules/vis/dist/vis-timeline-graph2d.min.css"
+              "node_modules/vis/dist/vis.min.css",
+              "node_modules/vis/dist/vis-timeline-graph2d.min.css"
             ],
             "scripts": [
               "node_modules/moment/min/moment.min.js",
@@ -256,6 +256,7 @@
             "assets": [
               "projects/app-service-diagnostics/src/favicon.ico",
               "projects/app-service-diagnostics/src/assets",
+              "projects/app-service-diagnostics/src/armResourceConfig",
               {
                 "glob": "**/*",
                 "input": "node_modules/ngx-monaco-editor/assets/monaco",
@@ -270,8 +271,8 @@
               "node_modules/@swimlane/ngx-datatable/release/assets/icons.css",
               "projects/app-service-diagnostics/src/styles.scss",
               "projects/app-service-diagnostics/src/styles/main.scss",
-              "node_modules/vis/dist/vis.min.css",			  
-			  "node_modules/vis/dist/vis-timeline-graph2d.min.css"
+              "node_modules/vis/dist/vis.min.css",
+              "node_modules/vis/dist/vis-timeline-graph2d.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
