--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -116,6 +116,12 @@
             "Day": 1,
             "Month": 1,
             "Year": 2020
+          },
+          {
+            //Interviews day
+            "Day": 13,
+            "Month": 8,
+            "Year": 2019
           }
         ]
       },
@@ -163,6 +169,12 @@
             "Day": 1,
             "Month": 1,
             "Year": 2020
+          },
+            {
+            //Interviews day
+            "Day": 13,
+            "Month": 8,
+            "Year": 2019
           }
         ]
       }
@@ -175,7 +187,7 @@
           {
             "BusinessStartDay": 1, // Monday
             "BuisnessEndDay": 5, //  Friday
-            "BusinessStartTimePST": "08:00", // 08:00 AM PST
+            "BusinessStartTimePST": "09:00", // 09:00 AM PST
             "BusinessEndTimePST": "17:00", //  05:00 PM PST
             "SupportTopics": [
               "32542218", //Availability and Performance/Web App Down
@@ -214,6 +226,21 @@
             "OffHours": "IndiaOffHours",
             "PublicHolidays": "IndiaPublicHolidays"
           }
+          //This is where you add other regions if needed,
+          //pasting an example below
+          ,
+          {
+            "BusinessStartDay": 1, // Monday
+            "BuisnessEndDay": 5, //  Friday
+            "BusinessStartTimePST": "07:00", // 07:00 AM PST
+            "BusinessEndTimePST": "09:00", //  09:00 AM PST
+            "SupportTopics": [
+              "32542208", //Configuration and Management/Backup and Restore
+              "32589281" //How Do I/IP Configuration
+            ],
+            "OffHours": "IndiaOffHours",
+            "PublicHolidays": "IndiaPublicHolidays"
+          }
         ]
       },
       {
@@ -222,7 +249,7 @@
           {
             "BusinessStartDay": 1, // Monday
             "BuisnessEndDay": 5, //  Friday
-            "BusinessStartTimePST": "08:00", // 08:00 AM PST
+            "BusinessStartTimePST": "09:00", // 09:00 AM PST
             "BusinessEndTimePST": "17:00", //  05:00 PM PST
             "SupportTopics": [
               "32542218", //Availability and Performance/Web App Down
