Applens auth flow to RuntimeHost (#440)
* Creating tokenservice base

* use appsettings flag to determine diagnostics service endpoint

* Renamed appsetting key

* Renamed appsettings back to DiagnosticRole

* Fix build failure

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -18,7 +18,13 @@
   "DiagnosticRole": {
     "endpoint": "",
     "authCertThumbprint": "",
-    "isLocalDevelopment": ""
+    "isLocalDevelopment": "",
+    "UseAppService": "",
+    "AppServiceEndpoint":  "",
+    "ClientId": "",
+    "AppKey": "",
+    "AADAuthority": "",
+    "AADResource": ""
   },
   "Observer": {
     "clientId": "",
