--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -51,6 +51,7 @@
     "hammerjs": "^2.0.8",
     "highcharts": "^7.1.3",
     "highcharts-angular": "^2.4.0",
+    "highcharts-custom-events": "^2.2.2",
     "ie-shim": "^0.1.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.1",
