--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -25,6 +25,13 @@
     "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889"
   },
   "dependencies": {
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "@types/react": "16.3.11",
+    "@types/react-dom": "16.0.5",
+    "@angular-react/core": "0.1.12",
+    "@angular-react/fabric": "0.1.6",
+    "office-ui-fabric-react": "5.82.4",
     "@angular/animations": "^7.2.13",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "6.1.10",
