--- a/AngularApp/projects/diagnostic-data/package.json
+++ b/AngularApp/projects/diagnostic-data/package.json
@@ -10,6 +10,13 @@
     "ngx-monaco-editor": "^6.0.0"
   },
   "dependencies": {
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "@types/react": "16.3.11",
+    "@types/react-dom": "16.0.5",
+    "@angular-react/core": "1.0.1",
+    "@angular-react/fabric": "1.2.1",
+    "office-ui-fabric-react": "5.82.4",
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
     "@swimlane/ngx-datatable": "^13.1.0",
