--- a/AngularApp/projects/diagnostic-data/package.json
+++ b/AngularApp/projects/diagnostic-data/package.json
@@ -2,8 +2,8 @@
   "name": "diagnostic-data",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/common": "8.0.2",
+    "@angular/core": "8.0.2",
     "@swimlane/ngx-datatable": "^13.1.0",
     "copy-html-to-clipboard": "^4.0.1",
     "applicationinsights-js": "1.0.20",
@@ -17,8 +17,8 @@
     "@angular-react/core": "1.0.1",
     "@angular-react/fabric": "1.2.1",
     "office-ui-fabric-react": "5.82.4",
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/common": "8.0.2",
+    "@angular/core": "8.0.2",
     "@swimlane/ngx-datatable": "^13.1.0",
     "applicationinsights-js": "1.0.20",
     "copy-html-to-clipboard": "^4.0.1",
