--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -42,8 +42,8 @@
     "@ng-select/ng-select": "^2.16.0",
     "@swimlane/ngx-datatable": "^15.0.2",
     "@types/applicationinsights-js": "^1.0.9",
-    "@types/react": "16.3.11",
-    "@types/react-dom": "16.0.5",
+    "@types/react": "~16.7.13",
+    "@types/react-dom": "^16.0.11",
     "adal-angular4": "^3.0.16",
     "admin-lte": "^2.4.3",
     "angular-split-ng6": "^1.0.0-rc.5",
@@ -66,8 +66,8 @@
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^4.12.0",
     "office-ui-fabric-react": "6.201.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "6.2.2",
     "tsickle": "^0.37.0",
@@ -77,16 +77,17 @@
     "zone.js": "~0.8.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.3",
+    "@angular-devkit/build-angular": "^0.803.12",
     "@angular-devkit/build-ng-packagr": "~0.800.3",
     "@angular-devkit/build-optimizer": "~0.800.3",
-    "@angular/cli": "8.0.3",
-    "@angular/compiler-cli": "^8.0.2",
+    "@angular/cli": "8.0.2",
+    "@angular/compiler-cli": "8.0.2",
     "@angular/language-service": "^8.0.2",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "@types/ua-parser-js": "^0.7.32",
+    "awesome-typescript-loader": "^2.2.1",
     "codelyzer": "^4.0.1",
     "concurrently": "^4.1.0",
     "jasmine": "^3.0.0",
@@ -105,7 +106,6 @@
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
     "typescript": "~3.4.5",
-    "webpack": "4.24.0",
     "webpack-bundle-analyzer": "^3.6.0"
   }
 }
