updating ARM API version

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
@@ -7,7 +7,7 @@
     "matchRegEx": "/Microsoft.AppPlatform/Spring/",
     "searchSuffix": "ASC",
     "azureServiceName": "Azure Spring Cloud Diagnostics",
-    "armApiVersion": "2019-04-01",
+    "armApiVersion": "2019-05-01-preview",
     "isSearchEnabled": true,
     "isApplicableForLiveChat": false,
     "categories": [
