Updating armResourceConfig to support the updated config for chat enablement of partners.

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerservice/managedclusters/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerservice/managedclusters/config.json
@@ -9,7 +9,10 @@
 	"azureServiceName": "Azure Kubernetes Services",
 	"armApiVersion": "2019-04-01",
 	"isSearchEnabled": true,
-	"isApplicableForLiveChat": false,
+	"liveChatConfig": {
+		"isApplicableForLiveChat": false,
+		"supportTopics": []
+	},
     "categories": [
         {
             "id": "Cluster Insights",
