Change the config to reflect the supportTopicId variable name change in the corresponding model.

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
@@ -11,7 +11,7 @@
 	"isSearchEnabled": true,
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
-		"supportTopics": []
+		"supportTopicIds": []
 	},
 	"categories": [{
 			"id": "Troubleshooting",
