Nmallick1/CXP chat api integration (#572)
* Adding a utility to generate GUIDs.

* CXP Chat service to facilitate calling into CXP Ibiza portal rpc calls.

* Adding helper methods to facilitate communication between D&S and Ibiza for CXP chat portal RPC calls.

* Adding a component to launch CXP Chat post confirmation.

* Updating armResourceConfig to support the updated config for chat enablement of partners.

* Add chat option in analysis view.

* Allow for chat in analysis view.

* Add chat option in detector view.

* Update the config for spring cloud to reflect the new schema support for cxp live chat integration.

* Decouple support docs rendering and chat button rendering.

* Moved the cxp chat component to generic analysis component so that it sticks across analysis.

* Handling the condition where an entry in enabled support topics has a wild card.

* Removed the chat component for detector-list-analysis component. Although a good place to keep, the chat button was not sticking across analysis.

* Show the chat button only when this view is loaded in public portal.

* Updating chat enabled support topics for Webapp Windows and Linux. Also added the ability to distinguish between Windows and Linux webapps.

* Change the config to reflect the supportTopicId variable name change in the corresponding model.

* Move support topic id config from cxp-chat-service to the intended resource service.

* Removing the hardcoded chat URL used during testing

* Changes to reduce lines of code.

* Removed the hardcoded chat URL that was used while testing.

* Move the chat button to the left

* Removed unused references.

* Removing the hardcoded URI used for testing.

* Changing the chat button from a button to a floating circle widget. Fixing cross browser rendering issues.

* Adding a proxy service for CXP Chat.

* Changed the way the chat confirmation box looks like. Fixed dependency injection errors and using agent ima

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.logic/workflows/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.logic/workflows/config.json
@@ -9,7 +9,10 @@
 	"azureServiceName": "Logic Apps",
 	"armApiVersion": "2016-06-01",
 	"isSearchEnabled": true,
-	"isApplicableForLiveChat": false,
+	"liveChatConfig": {
+		"isApplicableForLiveChat": false,
+		"supportTopicIds": []
+	},
 	"categories": [{
 			"id": "Diagnostics",
 			"name": "Diagnostics",
