Cognitive search component for better customer experience (#601)
* Cognitive search component for better customer experience

* Web search component - retries, max results, use stack, resource name as search suffix

* Remove secret

* Clear search term method added

* Fix build error

* Some finishes to search component

* Handling static content stack type in cognitive search

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -93,5 +93,8 @@
   "ApplensAuthorization": {
     "ClientId": "",
     "ClientSecret": ""
+  },
+  "ContentSearch": {
+    "Ocp-Apim-Subscription-Key": ""
   }
 }
