--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -52,6 +52,7 @@
     "copy-html-to-clipboard": "^4.0.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "g": "^2.0.1",
     "hammerjs": "^2.0.8",
     "highcharts": "^7.1.3",
     "highcharts-angular": "^2.4.0",
@@ -68,6 +69,7 @@
     "ngx-monaco-editor": "^6.0.0",
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^4.12.0",
+    "npm": "^6.14.4",
     "office-ui-fabric-core": "11.0.0",
     "office-ui-fabric-react": "6.201.1",
     "react": "^16.6.3",
