--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -42,11 +42,15 @@
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@ng-select/ng-select": "^2.16.0",
     "@swimlane/ngx-datatable": "^15.0.2",
+    "@types/backbone": "^1.4.4",
+    "@types/jointjs": "^2.0.0",
+    "@types/lodash": "^4.14.161",
     "@types/react": "~16.7.13",
     "@types/react-dom": "^16.0.11",
     "adal-angular4": "^3.0.16",
     "admin-lte": "^2.4.3",
     "angular-split-ng6": "^1.0.0-rc.5",
+    "backbone": "^1.4.0",
     "bootstrap": "^3.4.1",
     "copy-html-to-clipboard": "^4.0.1",
     "core-js": "^2.4.1",
@@ -56,7 +60,10 @@
     "highcharts-angular": "^2.4.0",
     "highcharts-custom-events": "^2.2.2",
     "ie-shim": "^0.1.0",
+    "install": "^0.13.0",
+    "jointjs": "^3.2.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.20",
     "moment": "^2.22.1",
     "ng-in-viewport": "^6.1.0",
     "ng-pick-datetime": "^6.0.16",
@@ -68,6 +75,7 @@
     "ngx-monaco-editor": "^6.0.0",
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^4.12.0",
+    "npm": "^6.14.8",
     "office-ui-fabric-core": "11.0.0",
     "office-ui-fabric-react": "6.201.1",
     "react": "^16.6.3",
