Introducing new component - Deep Search to show relevant internal documents in addition to results from Web (#914)
* Introducing a new Component : Deep Search

* Added numArticlesExpanded input to websearch component

* Removed console log statements and updated App Setting isEnabled for Deep Search

* Small styling improvements

* fixing the height of deep-search article div + updated web-search : not collapsed when deep-search is disabled

* changed height to max-height ; updated catchError block of web-search component ; moved checkIfDeepSearchEnabled method to constructor

* Loader shall not be needed

Co-authored-by: Vijay Saayi R <visaayir@microsoft.com>
Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -97,6 +97,11 @@
   "ContentSearch": {
     "Ocp-Apim-Subscription-Key": ""
   },
+  "DeepSearch": {
+    "endpoint" : "",
+    "authKey": "",
+    "isEnabled" : "false"
+  },
   "ApplensTemporaryAccess": {
     "Endpoint": "",
     "Key": "",
