--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -25,6 +25,11 @@
   "ContentSearch": {
     "Ocp-Apim-Subscription-Key": ""
   },
+  "DeepSearch": {
+    "endpoint" : "",
+    "authKey": "",
+    "isEnabled" : "false"
+  },
   "ApplicationInsights": {
     "InstrumentationKey": ""
   }
