--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -17,12 +17,14 @@
     "build-ncloud-applens-local": "ng build applens --configuration=nationalcloud-local",
     "build-asd": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build app-service-diagnostics --prod --sourceMap=true",
     "build": "npm run build-lib && npm run build-applens && npm run build-asd",
-    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "lib": "ng build diagnostic-data --watch",
     "generate-report": "ng build app-service-diagnostics --prod",
-    "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889"
+    "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889",
+    "test": "jest",
+    "test:firefox": "cross-env SELENIUM_BROWSER=firefox jest",
+    "test:chrome": "cross-env SELENIUM_BROWSER=chrome jest"
   },
   "dependencies": {
     "@angular-react/core": "1.0.1",
@@ -111,6 +113,23 @@
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
     "typescript": "~3.4.5",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "webpack-bundle-analyzer": "^3.6.0",
+    "@axe-core/webdriverjs": "^4.0.0",
+    "@types/jest": "^26.0.14",
+    "@types/selenium-webdriver": "^4.0.9",
+    "axe-sarif-converter": "^2.5.1",
+    "chromedriver": "^85.0.1",
+    "cross-env": "^7.0.2",
+    "geckodriver": "^1.20.0",
+    "jest": "^25.5.4",
+    "jest-circus": "^26.4.2",
+    "jest-junit": "^12.0.0",
+    "selenium-webdriver": "^4.0.0-alpha.7",
+    "ts-jest": "^25.5.1"
+  },
+  "resolutions": {
+    "minimist": "^1.2.2",
+    "acorn": "^7.1.1",
+    "kind-of": "^6.0.3"
   }
 }
