--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.logic/integrationServiceEnvironments/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.logic/integrationServiceEnvironments/config.json
@@ -1,7 +1,7 @@
 {
 	"homePageText": {
 		"title": "ISE Diagnostics (Preview)",
-		"description": "Use ISE Diagnostics to investigate common issues. Select the problem category that best matches the information or tool that you're interested in:",
+		"description": "Use ISE Diagnostics (Preview) to investigate common issues. Select the problem category that best matches the information or tool that you're interested in:",
 		"searchBarPlaceHolder": "Search ISE Diagnostics"
 	},
 	"matchRegEx": "/Microsoft.Logic/integrationServiceEnvironments/",
@@ -17,7 +17,7 @@
 			"id": "Provisioning Diagnostics",
 			"name": "Provisioning Diagnostics",
 			"description": "Is your ISE experiencing problems during provisioning? Select this category for a step-by-step analysis of the provisioning process.",
-			"keywords": [["Provisioning", "Deployment"],
+			"keywords": [["Provisioning Failures", "Deployment", "VNet", "Debug Logs"],
 			"color": "rgb(186, 211, 245)",
 			"createFlowForCategory": true,
 			"chatEnabled": false
