Update API-Version for App service Certificates team

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.certificateregistration/certificateorders/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.certificateregistration/certificateorders/config.json
@@ -7,7 +7,7 @@
 	"matchRegEx": "/Microsoft.CertificateRegistration/certificateOrders/",
 	"searchSuffix": "certs",
 	"azureServiceName": "App Service Certificates",
-	"armApiVersion": "2018-06-01-preview",
+	"armApiVersion": "2020-06-01",
 	"isSearchEnabled": true,
 	"liveChatConfig": {
 		"isApplicableForLiveChat": false,
