Update the default search suffix for logic apps (#945)
* Update the default search suffix for logic apps

* Update default search suffix for APIM as well

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.apimanagement/service/config.json
@@ -5,7 +5,7 @@
 		"searchBarPlaceHolder": "Search Azure API Management Services"
 	},
 	"matchRegEx": "/Microsoft.ApiManagement/service/",
-	"searchSuffix": "APIM",
+	"searchSuffix": "AZURE API MANAGEMENT SERVICE",
 	"azureServiceName": "Azure API Management Service",
 	"armApiVersion": "2018-06-01-preview",
 	"isSearchEnabled": true,
