Add a new category under the Azure Spring CLoud's Diagnose and solve prolems blade named Networking. (#1004)

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.appplatform/spring/config.json
@@ -29,6 +29,14 @@
 			"color": "rgb(249, 213, 180)",
 			"createFlowForCategory": false,
 			"chatEnabled": false
+		}, {
+			"id": "Networking",
+			"name": "Networking",
+            "description": "Are you having network connectivity issues when Azure Spring Cloud is deployed in your own virtual network? Find out if you misconfigured the Private DNS Zone, Custom DNS Server or blocked required outbound traffic in your VNet injected service instance.",
+            "keywords": [ "Virtual Network", "Custom DNS Server", "Private DNS Zone", "Firewall" ],
+			"color": "rgb(208, 228, 176)",
+			"createFlowForCategory": false,
+			"chatEnabled": false
 		}
 	],
 	"pesId": "16860"
